--- a/src/html/about.html
+++ b/src/html/about.html
@@ -51,8 +51,8 @@
 			<div class="fs-5 mb-5">
 				<h2>Стать автором</h2>
 				<p>
-					У Вас есть возможность предложить интересную статью для сайта Special.
-					Для добавления Вас в качестве автора на сайте Special достаточно
+					У вас есть возможность предложить интересную статью для сайта Special.
+					Для добавления вас в качестве автора на сайте Special достаточно
 					обратиться на почтовый адрес
 					<a href="mailto:daniil@dybka.ru" class="link">daniil@dybka.ru</a>.
 				</p>
@@ -91,7 +91,7 @@
 			<div class="fs-5 mb-5">
 				<h2>Реклама на сайте</h2>
 				<p>
-					На сайте медиа Special у Вас есть возможность заказать рекламу. Вам
+					На сайте медиа Special у вас есть возможность заказать рекламу. Вам
 					следует обратиться на почтовый адрес
 					<a href="mailto:daniil@dybka.ru" class="link">daniil@dybka.ru</a>.
 				</p>
