--- a/src/html/more/index.html
+++ b/src/html/more/index.html
@@ -67,6 +67,12 @@
                 <li><a href="/tech/experience-using-iphone-6s-for-six-months/" class="link">Опыт использования iPhone 6s в течение полугода</a></li>
             </ul>
         </div>
+        <div style="margin-bottom: 50px">
+            <h1>АРХИВ</h1>
+            <a href="/archive" class="link fs-4">
+                Открыть
+            </a>
+        </div>
 
     </main>
 
