--- a/src/html/p/how-I-develop-websites-in-php/index.html
+++ b/src/html/p/how-I-develop-websites-in-php/index.html
@@ -150,7 +150,7 @@
                 мне нравится данный язык программирования.
             </p>
             <p>
-                Фактически, можно использовать любой интересующий Вас язык программирования: Python, C++, Rust. Я не считаю, что это так
+                Фактически, можно использовать любой интересующий вас язык программирования: Python, C++, Rust. Я не считаю, что это так
                 важно. Только если Вы не создаете ресурс с большими оборотами пользователей или более узкой сферы использования.
             </p>
             <p>
