--- a/src/html/p/the-path-of-a-programmer-is-a-difficult-path/index.html
+++ b/src/html/p/the-path-of-a-programmer-is-a-difficult-path/index.html
@@ -104,14 +104,14 @@
                 данным советом, ведь работа сможет быть более успешной вплоть до 40%.
             </p>
             <p>
-                Борьба с выгоранием: заметить выгорание заранее трудно, но возможно. Как только у Вас в голове возникает желание
+                Борьба с выгоранием: заметить выгорание заранее трудно, но возможно. Как только у вас в голове возникает желание
                 отдохнуть от проекта или Вы понимаете, что немного устали программировать — данные сигналы стоит зафиксировать и начать
-                действовать. Если у Вас совсем нет сил что-либо делать — нужно оторваться от всех дел до того момента, как Вы заново не
+                действовать. Если у вас совсем нет сил что-либо делать — нужно оторваться от всех дел до того момента, как Вы заново не
                 станете «гореть» по любимому делу.
             </p>
             <h3>Выгода и плюсы</h3>
             <p>
-                Если у Вас есть много сил на работу, но именно это дело Вас не привлекает, а решать вопрос нужно, то есть 2 пути: решать
+                Если у вас есть много сил на работу, но именно это дело вас не привлекает, а решать вопрос нужно, то есть 2 пути: решать
                 вопрос через силу или начать делать дела, близкие к задаче. Спустя четырех лет активного программирования я отдаю больше
                 предпочтения второму способу, но разберем последствия каждого из случаев.
             </p>
