--- a/src/html/tech/ipad-mini-4-is-an-ambiguous-device/index.html
+++ b/src/html/tech/ipad-mini-4-is-an-ambiguous-device/index.html
@@ -103,7 +103,7 @@
             </p>
 
             <p>
-                В случае с производительностью, я бы порекомендовал рассмотреть mini 5 или mini 6. Например, на mini 4 у Вас не
+                В случае с производительностью, я бы порекомендовал рассмотреть mini 5 или mini 6. Например, на mini 4 у вас не
                 получится программировать в браузере из-за производительности, но об этом мы еще поговорим.
             </p>
 
@@ -160,7 +160,7 @@
             </p>
 
             <p>
-                В-третьих, планшет — мобильный девайс, и у Вас не получится установить большую часть нужных программ. Даже скопировать
+                В-третьих, планшет — мобильный девайс, и у вас не получится установить большую часть нужных программ. Даже скопировать
                 тот же репозиторий с GitHub не представляется возможным, разве что только программирование в браузере.
             </p>
 
