--- a/src/html/tech/macbook-pro-2014-13-review/index.html
+++ b/src/html/tech/macbook-pro-2014-13-review/index.html
@@ -180,7 +180,7 @@
                 настоящим цветам из жизни.
             </p>
             <p>
-                <i>Клавиатура</i> оставляет лишь приятные впечатления. Если выбрать модель до 16 года, у Вас клавиатура будет иного формата, с
+                <i>Клавиатура</i> оставляет лишь приятные впечатления. Если выбрать модель до 16 года, у вас клавиатура будет иного формата, с
                 большим ходом клавиш. Именно такая клавиатура мне нравится куда больше, потому что я привык к низкому ходу клавиш. После
                 16 года в макбуках устанавливались клавиатура-бабочка, которая подвержена залипаниям и имеет более низкий ход клавиш.
             </p>
