--- a/src/html/write-post.html
+++ b/src/html/write-post.html
@@ -106,8 +106,8 @@
         <div class="fs-5 mb-5">
             <h2>Страница автора</h2>
             <p>
-                Если Вашу статью одобрили к публикации — для Вас будет создана странциа автора.
-                Вас попросят прислать Вашу фотографию, которая будет приложена к странице автора.
+                Если Вашу статью одобрили к публикации — для вас будет создана странциа автора.
+                вас попросят прислать Вашу фотографию, которая будет приложена к странице автора.
                 Важно: фотография может быть только Вашего лица, другие фотографии не принимаются.
                 По умолчанию будет стоять фотография с Вашими инициалами: имени и фамилии.
             </p>
