--- a/src/html/about.html
+++ b/src/html/about.html
@@ -45,7 +45,7 @@
 					Главная задача сайта Special — простым языком и удобными способами
 					доносить полезную информацию до людей. Сайт Special предоставляет
 					удобный доступ к чтению статей. Выбор, на какой платформе производить
-					чтение находится за Вами.
+					чтение находится за вами.
 				</p>
 			</div>
 			<div class="fs-5 mb-5">
@@ -62,11 +62,11 @@
 					текстом, а что названием), фотографию поста.
 				</p>
 				<p>
-					Также нужно будет указать Ваше имя, фамилию и желаемую аватарку
-					(128x128), которая будет отображаться на Вашей странице автора статей.
+					Также нужно будет указать ваше имя, фамилию и желаемую аватарку
+					(128x128), которая будет отображаться на вашей странице автора статей.
 				</p>
 				<p>
-					Ваша заявка будет рассмотрена. В случае положительной проверки Ваш
+					ваша заявка будет рассмотрена. В случае положительной проверки ваш
 					пост будет опубликован на сайте Special.
 				</p>
 			</div>
@@ -96,9 +96,9 @@
 					<a href="mailto:daniil@dybka.ru" class="link">daniil@dybka.ru</a>.
 				</p>
 				<p>
-					Свяжитесь по почтовому адресу, опишите Ваше предложение. Также укажите
-					формат, в котором Вы хотите видеть рекламу. В случае одобрения
-					публикации рекламы, медиа Special выполнит Ваши требования по
+					Свяжитесь по почтовому адресу, опишите ваше предложение. Также укажите
+					формат, в котором вы хотите видеть рекламу. В случае одобрения
+					публикации рекламы, медиа Special выполнит ваши требования по
 					публикации рекламы на сайте медиа Special.
 				</p>
 			</div>
@@ -111,10 +111,10 @@
 					платформы, в основе которых лежит обман пользователей.
 				</p>
 				<p>
-					В том случае, если Ваш продукт не несет целей обмануть аудиторию,
+					В том случае, если ваш продукт не несет целей обмануть аудиторию,
 					заработать на этом и не является запрещенным на территории РФ и на
-					сайте Special, то Вы можете рассчитывать на публикацию рекламы, в
-					случае заинтересованности с обеих сторон (Вашей и медиа Special).
+					сайте Special, то вы можете рассчитывать на публикацию рекламы, в
+					случае заинтересованности с обеих сторон (вашей и медиа Special).
 				</p>
 			</div>
 			<div class="fs-5 mb-5">
@@ -135,7 +135,7 @@
 					содержимым при разных условиях.
 				</p>
 				<p>
-					Вышеперечисленные критерии не являются обязательными, это факт. В
+					вышеперечисленные критерии не являются обязательными, это факт. В
 					создании сайта есть лишь «рекомендации». Но также существуют и отличия
 					между хорошим сайтом и плохим. Плохим сайтом не хочется пользоваться,
 					тогда какой смысл от этого сайта, если пользователь не хочет получать
