--- a/src/html/games/babkaonthehuntclassic/index.html
+++ b/src/html/games/babkaonthehuntclassic/index.html
@@ -28,7 +28,7 @@
 
         <div class="container--post">
             <p>
-                Вы когда-нибудь задумывались, как было бы интересно отправиться в путешествие по России вместе с бабушкой? Теперь у вас
+                вы когда-нибудь задумывались, как было бы интересно отправиться в путешествие по России вместе с бабушкой? Теперь у вас
                 есть такая возможность – в мобильной игре "Бабушка на охоте"!
             </p>
             <p>
