--- a/src/html/p/how-I-develop-websites-in-php/index.html
+++ b/src/html/p/how-I-develop-websites-in-php/index.html
@@ -76,7 +76,7 @@
                 Но просто папками и файлами PHP обойтись не получится. Да, можно создать отличный, оптимизированных с хорошей
                 доступностью сайт. Но помимо наличия файлов страниц, нужны также вспомогательные файлы, описывающие сайт. Данные файлы
                 обычный человек читать не будет, ему они не интересы. Данные файлы нужны для роботов-поисковиков, которые будут
-                проверять Ваш сайт и проходиться по нему.
+                проверять ваш сайт и проходиться по нему.
             </p>
             <p>
                 Первый разобранный выше файл - это .htaccess. Нужен для того, чтобы, к примеру, изменить формат отображения URL-адреса.
@@ -101,9 +101,9 @@
                 браузер Safari считывает данную информацию и отображает в заголовке.
             </p>
             <p>
-                Например, для медиа сайта можно использовать файл RSS. В него записывается информация о страницах. Если Вы
-                посмотрите медиа сайты, в footer’е Вы увидите ссылку на RSS-канал. Это файл, хранящий какие-то записи. Часто данный
-                RSS-файл можно подключить для какой-нибудь соц. сети, чтобы она отображала Ваши последние страницы.
+                Например, для медиа сайта можно использовать файл RSS. В него записывается информация о страницах. Если вы
+                посмотрите медиа сайты, в footer’е вы увидите ссылку на RSS-канал. Это файл, хранящий какие-то записи. Часто данный
+                RSS-файл можно подключить для какой-нибудь соц. сети, чтобы она отображала ваши последние страницы.
             </p>
             <h3>«Чистый» PHP или Laravel</h3>
             <p>
@@ -111,7 +111,7 @@
                 следует использовать - просто PHP или фреймворк Laravel?
             </p>
             <p>
-                Сообщу, что транслируемое мнение - это сугубо мой личный опыт. Если Ваш опыт отличается - это отлично.
+                Сообщу, что транслируемое мнение - это сугубо мой личный опыт. Если ваш опыт отличается - это отлично.
             </p>
             <p>
                 Создание своего первого сайта я начинал именно с чистого PHP. Понятие «чистый PHP» означает, что используется язык
@@ -151,7 +151,7 @@
             </p>
             <p>
                 Фактически, можно использовать любой интересующий вас язык программирования: Python, C++, Rust. Я не считаю, что это так
-                важно. Только если Вы не создаете ресурс с большими оборотами пользователей или более узкой сферы использования.
+                важно. Только если вы не создаете ресурс с большими оборотами пользователей или более узкой сферы использования.
             </p>
             <p>
                 В заключение я хотел бы выделить преимущества PHP: я использую его для модульности моего проекта, в качестве
