--- a/src/html/p/how-I-fight-against-burnout/index.html
+++ b/src/html/p/how-I-fight-against-burnout/index.html
@@ -36,7 +36,7 @@
             </p>
             <h3>Что такое выгорание</h3>
             <p>
-                Выгорание — это состояние моральной усталости, из-за которого нет желания чем-либо заниматься. Выгорание — это первая
+                выгорание — это состояние моральной усталости, из-за которого нет желания чем-либо заниматься. Выгорание — это первая
                 ступень к депрессии. Не стоит недооценивать это состояние, потому что борьба с выгоранием не такая простая, как с
                 физической усталостью.
             </p>
@@ -57,7 +57,7 @@
             </p>
             <ul>
                 <li>
-                    Не сидите на месте долгое время. Встаньте, походите 5 минут. Смените место. Выпейте воды или сделайте разминку. Ваш мозг
+                    Не сидите на месте долгое время. Встаньте, походите 5 минут. Смените место. Выпейте воды или сделайте разминку. ваш мозг
                     не может все время работать с одинаковой эффективностью, вам точно нужен отдых.
                 </li>
                 <li>
