--- a/src/html/p/project-development-history-live.creagoo.ru-its-forced-closure/index.html
+++ b/src/html/p/project-development-history-live.creagoo.ru-its-forced-closure/index.html
@@ -109,8 +109,8 @@
                 вполне рад этому.
             </p>
             <p>
-                В заключение я хочу сказать, чтобы Вы не боялись изучать новые технологии. Не бояться чего-то не знать или не уметь. Это
-                всегда можно будет исправить спустя время. Если верить в свое дело — Вы обязательно дойдете до успеха. Удачи!
+                В заключение я хочу сказать, чтобы вы не боялись изучать новые технологии. Не бояться чего-то не знать или не уметь. Это
+                всегда можно будет исправить спустя время. Если верить в свое дело — вы обязательно дойдете до успеха. Удачи!
             </p>
         </div>
 
