--- a/src/html/p/the-path-of-a-programmer-is-a-difficult-path/index.html
+++ b/src/html/p/the-path-of-a-programmer-is-a-difficult-path/index.html
@@ -34,7 +34,7 @@
             </p>
             <p>
                 Перед началом следует разобраться, кто такой кодер, а кто такой программист. Кодер — человек, отвечающий за написание
-                кода. Когда Вы изучаете какой-то материал и повторяете его — Вы кодер, от слова «код».
+                кода. Когда вы изучаете какой-то материал и повторяете его — вы кодер, от слова «код».
             </p>
             <p>
                 А программист — человек, решающий технические вопросы с помощью программирования. Главное отличие кодера от
@@ -55,8 +55,8 @@
             </p>
             <p>
                 Совсем не изучив алгоритмы, а пройдя только по основам программист может перестать увлекаться техническими задачами для
-                решения, потому что будет думать, что уже все знает. Как Вы понимаете — это ошибочное мышление. Стоит продолжать изучать
-                язык программирования и через время Вы сможете понять, что действительно не знаете и большей части задач, которые
+                решения, потому что будет думать, что уже все знает. Как вы понимаете — это ошибочное мышление. Стоит продолжать изучать
+                язык программирования и через время вы сможете понять, что действительно не знаете и большей части задач, которые
                 требуется изучать и решать.
             </p>
             <p>
@@ -70,11 +70,11 @@
                 Вам нужно делать. Что изучать. Что пробовать.
             </p>
             <p>
-                В некоторых случаях данная «яма» может быть вызвана тем, что Вы недостаточно глубоко изучили основы языка
+                В некоторых случаях данная «яма» может быть вызвана тем, что вы недостаточно глубоко изучили основы языка
                 программирования, а сразу же идете изучать какой-нибудь крупный фреймворк данного языка программирования, который
                 полностью строится на основах данного языка программирования.
             </p>
-            <h3>Выгорание</h3>
+            <h3>выгорание</h3>
             <p>
                 Наверное самое страшное, что может ждать программиста — выгорание. Только пройдя через него можно говорить, что это
                 такое. На своем пути я уже успел 2 раза выгореть от проекта.
@@ -84,7 +84,7 @@
                 данное явление заметить ну очень трудно.
             </p>
             <p>
-                Выгорание для кого-то может быть похоже с простой усталостью. Но если обычную физическую усталость можно нейтрализовать
+                выгорание для кого-то может быть похоже с простой усталостью. Но если обычную физическую усталость можно нейтрализовать
                 обычным отдыхом, то вот как поступить с моральной усталостью? Разберем чуть позже.
             </p>
             <p>
@@ -94,9 +94,9 @@
             </p>
             <h3>Как бороться с перечисленными проблемами</h3>
             <p>
-                Прежде всего я порекомендую создать интервал времени, которое Вы сможете выделять на программирование. С какого и до
+                Прежде всего я порекомендую создать интервал времени, которое вы сможете выделять на программирование. С какого и до
                 какого часа Вам лично разрешено заниматься программированием. Данный временной интервал поможет избежать ночных
-                посиделок на ноутбуком. В любом случае, лишь 20% кода, написанного ночью Вы оставите в проекте.
+                посиделок на ноутбуком. В любом случае, лишь 20% кода, написанного ночью вы оставите в проекте.
             </p>
             <p>
                 Также очень полезным будет совет отрываться от рабочего места. И именно от рабочего места. Следует просто сменить
@@ -105,24 +105,24 @@
             </p>
             <p>
                 Борьба с выгоранием: заметить выгорание заранее трудно, но возможно. Как только у вас в голове возникает желание
-                отдохнуть от проекта или Вы понимаете, что немного устали программировать — данные сигналы стоит зафиксировать и начать
-                действовать. Если у вас совсем нет сил что-либо делать — нужно оторваться от всех дел до того момента, как Вы заново не
+                отдохнуть от проекта или вы понимаете, что немного устали программировать — данные сигналы стоит зафиксировать и начать
+                действовать. Если у вас совсем нет сил что-либо делать — нужно оторваться от всех дел до того момента, как вы заново не
                 станете «гореть» по любимому делу.
             </p>
-            <h3>Выгода и плюсы</h3>
+            <h3>выгода и плюсы</h3>
             <p>
                 Если у вас есть много сил на работу, но именно это дело вас не привлекает, а решать вопрос нужно, то есть 2 пути: решать
                 вопрос через силу или начать делать дела, близкие к задаче. Спустя четырех лет активного программирования я отдаю больше
                 предпочтения второму способу, но разберем последствия каждого из случаев.
             </p>
             <p>
-                Если Вы будете решать вопрос через силу — Ваш код будет слабым, скорей всего Вы будете использовать или уже готовые и
-                придуманные решения или Ваши решения не будут надежными. И в итоге Вы успешно доведете себя до выгорания и Вам придется
+                Если вы будете решать вопрос через силу — ваш код будет слабым, скорей всего вы будете использовать или уже готовые и
+                придуманные решения или ваши решения не будут надежными. И в итоге вы успешно доведете себя до выгорания и Вам придется
                 делать долгую паузу во всем программировании.
             </p>
             <p>
-                Если Вы станете решать близкие задачи к той, что перед Вами стоит, вот какие плюсы Вы сможете получить: Вы будете решать
-                задачу, Вы не станете уставать, Вы будете отдыхать от того дела, от которого Вы устали. В общем — тут одни плюсы!
+                Если вы станете решать близкие задачи к той, что перед вами стоит, вот какие плюсы вы сможете получить: вы будете решать
+                задачу, вы не станете уставать, вы будете отдыхать от того дела, от которого вы устали. В общем — тут одни плюсы!
                 Поэтому я порекомендую делать именно так.
             </p>
             <p>
