--- a/src/html/p/used-market-what-is-it-with-what-it-is-eaten/index.html
+++ b/src/html/p/used-market-what-is-it-with-what-it-is-eaten/index.html
@@ -40,7 +40,7 @@
             </p>
 
             <p>
-                Вы сами определяете, как общаться с клиентом, как строить свой бизнес. Именно с помощью Б/У рынка у вас есть возможность
+                вы сами определяете, как общаться с клиентом, как строить свой бизнес. Именно с помощью Б/У рынка у вас есть возможность
                 начать свой небольшой бизнес по продаже техники.
             </p>
 
