--- a/src/html/tech/experience-using-iphone-6s-for-six-months/index.html
+++ b/src/html/tech/experience-using-iphone-6s-for-six-months/index.html
@@ -40,7 +40,7 @@
             <h3>Первое впечатление от своего первого айфона</h3>
             <p>
                 Продуманность системы, анимации, экосистема, продуманность приложений, отличные цвета и приятные материалы - это все,
-                что Вы получите от устройства Apple.
+                что вы получите от устройства Apple.
             </p>
             <p>
                 Часто говорят, что использование айфонов невероятно приятное, и в этом и правда убеждаешься на практике. То, какую
@@ -48,7 +48,7 @@
                 неудобств.
             </p>
             <p>
-                Я смело могу порекомендовать к покупке айфона в качестве своего основного устройства, если перед Вами не стоят особые
+                Я смело могу порекомендовать к покупке айфона в качестве своего основного устройства, если перед вами не стоят особые
                 задачи, для решений которых айфон не будет казаться таким сильным с технической стороны.
             </p>
             <h3>Большие удобства iPhone 6s</h3>
@@ -62,7 +62,7 @@
                 получу от экосистемы Apple. Также мне было интересно воспользоваться загрузкой моих проектов на айфон.
             </p>
             <p>
-                Выбрать iPhone 6s я решил из-за его актуальности, цены и размеров. Купить полностью рабочий аппарат от Apple за 10% от
+                выбрать iPhone 6s я решил из-за его актуальности, цены и размеров. Купить полностью рабочий аппарат от Apple за 10% от
                 цены —невероятное счастье для опыта. Вряд ли у меня получится описать невероятные качества данного аппарата, но я
                 постараюсь.
             </p>
@@ -92,7 +92,7 @@
                 и удобстве.
             </p>
             <p>
-                Купить полностью рабочий аппарат за адекватные деньги трудно. Скорей всего Вы купите уже однажды проданный телефон или
+                Купить полностью рабочий аппарат за адекватные деньги трудно. Скорей всего вы купите уже однажды проданный телефон или
                 телефон с какими-то компромиссами. К примеру, через мои руки прошло 3 iPhone 6s со следующими проблемами: на одном
                 телефоне не работал переключатель бесшумного режима, на одном телефоне был заменен дисплей, на одном телефоне была
                 батарея с 70%.
