--- a/src/html/tech/ipad-mini-4-is-an-ambiguous-device/index.html
+++ b/src/html/tech/ipad-mini-4-is-an-ambiguous-device/index.html
@@ -98,7 +98,7 @@
             </p>
 
             <p>
-                И мой выбор пал на iPad mini 4, потому что цена и качество этого аппарата находятся на высоте. За небольшую стоимость Вы
+                И мой выбор пал на iPad mini 4, потому что цена и качество этого аппарата находятся на высоте. За небольшую стоимость вы
                 получаете большой набор функционала.
             </p>
 
@@ -165,7 +165,7 @@
             </p>
 
             <p>
-                Но у программирования в браузере есть еще один большой минус — Вы не сможете установить нужные библиотеки, как тот же
+                Но у программирования в браузере есть еще один большой минус — вы не сможете установить нужные библиотеки, как тот же
                 OpenCV. Поэтому, об этом можете забыть.
             </p>
 
