--- a/src/html/tech/macbook-2017-review/index.html
+++ b/src/html/tech/macbook-2017-review/index.html
@@ -139,7 +139,7 @@
             </p>
 
             <p>
-                За заплаченную цену Вы получаете отличное устройство, альтернатив для которого просто не существует. Даже если и
+                За заплаченную цену вы получаете отличное устройство, альтернатив для которого просто не существует. Даже если и
                 получится найти ноутбук за такую же цену на Windows, он точно не сможет сравниться ни с одним из макбуков.
             </p>
 
@@ -152,7 +152,7 @@
             <h3>Подробнее про характеристики</h3>
 
             <p>
-                Выбор макбука сильно отличается от выбора похожего ноутбука на Windows. В частности, очень часто люди покупают себе
+                выбор макбука сильно отличается от выбора похожего ноутбука на Windows. В частности, очень часто люди покупают себе
                 макбуки с маленьким количеством памяти. Давайте подробнее про мои характеристики и почему я не выбрал другую комбинацию.
             </p>
 
