--- a/src/html/tech/macbook-pro-2014-13-review/index.html
+++ b/src/html/tech/macbook-pro-2014-13-review/index.html
@@ -175,7 +175,7 @@
             </p>
             <h3>Плюсы макбука</h3>
             <p>
-                <i>Дисплей</i> макбука невероятен. Технология Retina удваивает количество пикселей дисплея, из-за чего Вы не увидите здесь
+                <i>Дисплей</i> макбука невероятен. Технология Retina удваивает количество пикселей дисплея, из-за чего вы не увидите здесь
                 пиксели. Отличная калибровка дисплея позволит получать удовольствие от цветов, которые максимально приближены к
                 настоящим цветам из жизни.
             </p>
@@ -203,7 +203,7 @@
             <h3>Проблемы данного макбука</h3>
             <p>
                 Как и было сказано выше — данный макбук уже 8 лет на рынке и купить абсолютно новый девайс не представляется возможным,
-                с огромной вероятностью Вы купите когда-то использованное устройство, так называемое б/у.
+                с огромной вероятностью вы купите когда-то использованное устройство, так называемое б/у.
             </p>
             <p>
                 На моем устройстве была плохо приклеена батарея к корпусу, поэтому она болталась. Исправил данный момент очень просто —
@@ -214,12 +214,12 @@
             </p>
             <p>
                 Также сзади на крышке отсутствовало 3 болта. Я заказал в магазине болты под свою модель ноутбука и успешно заменил их.
-                Будьте внимательны, чтобы Вы заказали именно на свою модель ноутбука болты. Учтите, что некоторые болты крепятся под
+                Будьте внимательны, чтобы вы заказали именно на свою модель ноутбука болты. Учтите, что некоторые болты крепятся под
                 наклоном к крышке. И еще, 2 болта будут более маленького размера — два этих болта нужно закрепить в той стороне, где
                 находится отверстие охлаждения.
             </p>
             <p>
-                Все это было именно на моем устройстве, при покупке Вы можете осмотреть девайс и выбрать себе устройство с меньшим
+                Все это было именно на моем устройстве, при покупке вы можете осмотреть девайс и выбрать себе устройство с меньшим
                 количеством дефектов. К слову, еще у меня есть желание заказать ножки для ноутбука и их тоже заменить.
             </p>
             <p>
