--- a/src/html/updates.html
+++ b/src/html/updates.html
@@ -86,7 +86,7 @@
 			</div>
 			<div class="fs-5 mb-5">
 				<p class="text--more fs-6">Изменения 06.02.23</p>
-				<p>Выход в продакшен.</p>
+				<p>выход в продакшен.</p>
 			</div>
 		</main>
 
