--- a/src/html/write-post.html
+++ b/src/html/write-post.html
@@ -106,10 +106,10 @@
         <div class="fs-5 mb-5">
             <h2>Страница автора</h2>
             <p>
-                Если Вашу статью одобрили к публикации — для вас будет создана странциа автора.
-                вас попросят прислать Вашу фотографию, которая будет приложена к странице автора.
-                Важно: фотография может быть только Вашего лица, другие фотографии не принимаются.
-                По умолчанию будет стоять фотография с Вашими инициалами: имени и фамилии.
+                Если вашу статью одобрили к публикации — для вас будет создана странциа автора.
+                вас попросят прислать вашу фотографию, которая будет приложена к странице автора.
+                Важно: фотография может быть только вашего лица, другие фотографии не принимаются.
+                По умолчанию будет стоять фотография с вашими инициалами: имени и фамилии.
             </p>
             <a href="/img/content/example_author_page.jpg" target="_blank" aria-label="Открыть изображение в новом окне">
                 <img src="/img/content/example_author_page.jpg" class="default-border-image img-fluid shadow-sm mb-4 mt-1 col-md-10"
