--- a/src/parts/footer.html
+++ b/src/parts/footer.html
@@ -2,7 +2,7 @@
     <div class="container py-2">
         <div class="d-flex flex-wrap align-items-center">
             <div class="me-auto">
-                <p class="text-white--adaptive mb-0">Мы используем файлы cookie для Вашего удобства</p>
+                <p class="text-white--adaptive mb-0">Мы используем файлы cookie для вашего удобства</p>
             </div>
             <div>
                 <div class="text-invert btn-rounded fs-5">
