--- a/src/html/p/how-I-fight-against-burnout/index.html
+++ b/src/html/p/how-I-fight-against-burnout/index.html
@@ -57,7 +57,7 @@
             </p>
             <ul>
                 <li>
-                    Не сидите на месте долгое время. Встаньте, походите 5 минут. Смените место. Выпейте воды или сделайте разминку. ваш мозг
+                    Не сидите на месте долгое время. Встаньте, походите 5 минут. Смените место. Выпейте воды или сделайте разминку. Ваш мозг
                     не может все время работать с одинаковой эффективностью, вам точно нужен отдых.
                 </li>
                 <li>
