--- a/src/html/p/how-to-sell-on-buy-markets/index.html
+++ b/src/html/p/how-to-sell-on-buy-markets/index.html
@@ -43,7 +43,7 @@
             <p>К тому же, в скупках работают люди, которые разбираются в технике. И, вероятно, они захотят еще сильнее снизить цену
             покупки вашего товара. Потому что скупки работают именно на этом: разница между продажей и покупкой и есть прибыль.</p>
 
-            <h3>выбирайте несколько площадок</h3>
+            <h3>Выбирайте несколько площадок</h3>
 
             <p>Будьте готовы, что вам нужно будет выставлять объявление через несколько площадок. Пусть среди них будет только 1
             крупная, все равно не стоит упускать это из внимания.</p>
