--- a/src/html/p/the-path-of-a-programmer-is-a-difficult-path/index.html
+++ b/src/html/p/the-path-of-a-programmer-is-a-difficult-path/index.html
@@ -74,7 +74,7 @@
                 программирования, а сразу же идете изучать какой-нибудь крупный фреймворк данного языка программирования, который
                 полностью строится на основах данного языка программирования.
             </p>
-            <h3>выгорание</h3>
+            <h3>Выгорание</h3>
             <p>
                 Наверное самое страшное, что может ждать программиста — выгорание. Только пройдя через него можно говорить, что это
                 такое. На своем пути я уже успел 2 раза выгореть от проекта.
@@ -109,7 +109,7 @@
                 действовать. Если у вас совсем нет сил что-либо делать — нужно оторваться от всех дел до того момента, как вы заново не
                 станете «гореть» по любимому делу.
             </p>
-            <h3>выгода и плюсы</h3>
+            <h3>Выгода и плюсы</h3>
             <p>
                 Если у вас есть много сил на работу, но именно это дело вас не привлекает, а решать вопрос нужно, то есть 2 пути: решать
                 вопрос через силу или начать делать дела, близкие к задаче. Спустя четырех лет активного программирования я отдаю больше
