--- a/src/html/privacy/policy.html
+++ b/src/html/privacy/policy.html
@@ -123,7 +123,7 @@
         <li>получать от субъекта персональных данных достоверные информацию и/или документы, содержащие персональные
             данные;
         </li>
-        <li>в случае отзыва субъектом персональных данных согласия на обработку персональных данных Оператор вправе
+        <li>В случае отзыва субъектом персональных данных согласия на обработку персональных данных Оператор вправе
             продолжить
             обработку персональных данных без согласия субъекта персональных данных при наличии оснований, указанных в
             Законе о
@@ -181,7 +181,7 @@
             данные являются неполными, устаревшими, неточными, незаконно полученными или не являются необходимыми для
             заявленной
             цели обработки, а также принимать предусмотренные законом меры по защите своих прав;</li>
-        <li>выдвигать условие предварительного согласия при обработке персональных данных в целях продвижения на рынке
+        <li>Выдвигать условие предварительного согласия при обработке персональных данных в целях продвижения на рынке
             товаров,
             работ и услуг;</li>
         <li>на отзыв согласия на обработку персональных данных;</li>
