--- a/src/html/updates/great-news-channel-special/index.html
+++ b/src/html/updates/great-news-channel-special/index.html
@@ -15,7 +15,7 @@
             <div class="post--bg-image-block">
 
                 @@include('../../../parts/header-post.html', {
-                "color": "#fff"
+                    "color": "#fff"
                 })
 
                 <div class="post--bg-content">
@@ -36,10 +36,17 @@
                         </button>
                     </div>
                     <div class="post--bg-image-bottom">
-                        <div class="text-white">
-                            <a href="/author/daniildybka" class="link-white">
-                                Даниил Дыбка
-                            </a>
+                        <div class="d-flex flex-wrap">
+                            <div class="text-white me-4">
+                                <a href="/author/daniildybka" class="link-white">
+                                    Даниил Дыбка
+                                </a>
+                            </div>
+                            <div class="text-white">
+                                <a href="#" class="link-white">
+                                    Поделиться
+                                </a>                                
+                            </div>
                         </div>
                     </div>
                 </div>
