--- a/src/html/more/index.html
+++ b/src/html/more/index.html
@@ -69,7 +69,7 @@
         </div>
         <div style="margin-bottom: 50px">
             <h1>АРХИВ</h1>
-            <a href="/archive" class="link fs-4">
+            <a href="/more/archive/" class="link fs-4">
                 Открыть
             </a>
         </div>
