--- a/src/parts/footer.html
+++ b/src/parts/footer.html
@@ -110,11 +110,8 @@
     </div>
 </footer>
 
-@@if(context.noBG != "no") {
-    <!-- <script src="/js/bg.js"></script> -->
-}
-
 <script src="/js/theme.js"></script>
 <script src="/js/privacy.js"></script>
+<script src="/js/buttonback.js"></script>
 <script src="/js/popper.min.js"></script>
 <script src="/js/bootstrap.min.js"></script>
