--- a/src/parts/header.html
+++ b/src/parts/header.html
@@ -2,7 +2,17 @@
     <header class="header--main">
         <div class="container d-flex flex-wrap align-items-center justify-content-center justify-content-md-between">
             <div class="col-md-3 mb-2 mb-md-0 header--logo-pc">
-                <div class="d-flex">
+                <div class="d-flex align-items-center">
+
+                    <div id="header__btn_back" class="header--btn-back">
+                        <a id="header__btn_back_link" href="">
+                            <svg xmlns="http://www.w3.org/2000/svg" width="32" height="32" class="link-icon" viewBox="0 0 16 16">
+                                <path fill-rule="evenodd"
+                                    d="M15 8a.5.5 0 0 0-.5-.5H2.707l3.147-3.146a.5.5 0 1 0-.708-.708l-4 4a.5.5 0 0 0 0 .708l4 4a.5.5 0 0 0 .708-.708L2.707 8.5H14.5A.5.5 0 0 0 15 8z" />
+                            </svg>
+                        </a>
+                    </div>
+
                     <div class="header--adaptive-button me-2">
                         <div class="text-invert-dark btn-rounded fs-5">
                             <button onClick="ChangeThemeButton()" aria-label="Сменить темную и светлую тему" class="btn btn-light px-4 py-2 d-flex header--button
@@ -14,18 +24,6 @@
                             </button>
                         </div>
                     </div>
-                    <!-- <div class="header--adaptive-button me-2">
-                        <div class="btn-rounded fs-5">
-                            <button onClick="ChangeBackground()" aria-label="Сменить задний фон" class="btn btn-light px-4 py-2 d-flex header--button
-                                                    text-decoration-none text-invert-dark align-items-center">
-                                <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" class="icon me-btn-1" viewBox="0 0 16 16">
-                                    <path fill-rule="evenodd"
-                                        d="M11.5 15a.5.5 0 0 0 .5-.5V2.707l3.146 3.147a.5.5 0 0 0 .708-.708l-4-4a.5.5 0 0 0-.708 0l-4 4a.5.5 0 1 0 .708.708L11 2.707V14.5a.5.5 0 0 0 .5.5zm-7-14a.5.5 0 0 1 .5.5v11.793l3.146-3.147a.5.5 0 0 1 .708.708l-4 4a.5.5 0 0 1-.708 0l-4-4a.5.5 0 0 1 .708-.708L4 13.293V1.5a.5.5 0 0 1 .5-.5z" />
-                                </svg>
-                                Фон
-                            </button>
-                        </div>
-                    </div> -->
                 </div>
             </div>
 
